[package]
name = "defmt-serial"
version = "0.1.0"
edition = "2021"
authors = [ "Gaute Hope <eg@gaute.vetsj.com>" ]
description = "Log defmt-messages over serial"
license = "MIT"
repository = "https://github.com/gauteh/defmt-serial"


[dependencies]
critical-section = "0.2.7"
defmt = "0.3.2"
embedded-hal = "1.0.0-alpha.8"
nb = "1.0.0"

[dev-dependencies]
cortex-m-rt = "0.7.1"
panic-probe = { version = "0.3.0", features = [ "print-defmt" ] }
cortex-m = "0.7.5"

[dev-dependencies.ambiq-hal]
version = "0.2"
features = [ "ambiq-sdk", "sparkfun-redboard-nano", "rt"]
git = "https://github.com/gauteh/ambiq-rs"
