[package]
name = "defmt-serial"
version = "0.7.0"
edition = "2021"
authors = [ "Gaute Hope <eg@gaute.vetsj.com>" ]
description = "Log defmt-messages over serial"
license = "MIT"
repository = "https://github.com/gauteh/defmt-serial"


[dependencies]
critical-section = "1.1"
defmt = "0.3"
embedded-hal = "0.2.7"
nb = "1.1"

[dev-dependencies]
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = [ "print-defmt" ] }
cortex-m = "0.7"
static_cell = "2.0.0"

[dev-dependencies.ambiq-hal]
version = "0.3"
features = [ "ambiq-sdk", "sparkfun-redboard-nano", "rt"]
git = "https://github.com/gauteh/ambiq-rs"
