[package]
name = "example-artemis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.1"
panic-probe = { version = "0.3.0", features = [ "print-defmt" ] }
cortex-m = "0.7.5"
defmt = "0.3.2"
defmt-rtt = "0.3.2"

[dependencies.ambiq-hal]
version = "0.2"
features = [ "ambiq-sdk", "sparkfun-redboard-nano", "rt"]
git = "https://github.com/gauteh/ambiq-rs"
