[package]
name = "pico-defmt-serial"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6"}
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
defmt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rp-pico = "0.7"
defmt-serial = "0.6.0"
panic-halt = "0.2.0"
static_cell = "2.0.0"
